kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-pod
  namespace: homework
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: homework
  template:
    metadata:
      labels:
        app: homework
    spec:
      nodeSelector:
        homework: "true"
      containers:
      - name: server
        image: python:3.10.20-alpine3.22
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        workingDir: /homework
        command: ["python3", "-m", "http.server", "8000"]
        volumeMounts:
        - name: workdir
          mountPath: /homework
        - name: config
          mountPath: /homework/conf
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm /homework/index.html", "-f"]
      volumes:
      - name: workdir
        persistentVolumeClaim:
          claimName: webserver-pvc 
      - name: config
        configMap:
          name: game-demo
